# casper-node-proxy

./: AGENTS.md  Cargo.toml  README.md
.ci/: run_tests.sh
.github/workflows/: ci.yml
migrations/0001_create_tables/: down.sql  up.sql
src/: binary_proxy.rs  config.rs  db.rs  handlers.rs  jsonrpc_proxy.rs  lib.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  schema.rs  sse.rs  state.rs
tests/: binary_ws.rs  events_sse_listener.rs  events_ws.rs  jsonrpc_proxy.rs  rate_limit.rs  rpc_item_rate_limit.rs  sidecar_batch.rs
