[package]
name = "casper-node-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
casper-binary-port = "1.1.1"
casper-types = "6.1.0"
diesel = { version = "2.3.5", features = ["sqlite", "r2d2", "postgres"] }
diesel_migrations = { version = "2.3.1", features = ["postgres", "sqlite"] }
futures-util = "0.3.31"
governor = "0.10.4"
prometheus = "0.14.0"
redis = { version = "1.0.2", features = ["tokio-comp"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
veles-casper-rust-sdk = "0.4.0"

[dev-dependencies]
tokio-tungstenite = "0.28.0"
